Version 2.02.178 - 
=====================================
  --enable-testing switch for ./configure has been removed.
  --with-snapshots switch for ./configure has been removed.
  --with-mirrors switch for ./configure has been removed.
  --with-raid switch for ./configure has been removed.
  --with-thin switch for ./configure has been removed.
  --with-cache switch for ./configure has been removed.
  Extend validation of region_size for mirror segment.
  Reload whole device stack when reinitilizing mirror log.
  Mirrors without monitoring are WARNING and not blocking on error.
  Detect too big region_size with clustered mirrors.
  Fix evaluation of maximal region size for mirror log.
  Enhance mirror log size estimation and use smaller size when possible.
  Fix incorrect mirror log size calculation on 32bit arch.
  Enhnace preloading tree creating.
  Fix regression on acceptance of any LV on lvconvert.
  Restore usability of thin LV to be again external origin for another thin.
  Keep systemd vars on change event in 69-dm-lvm-metad.rules for systemd reload.
  Write systemd and non-systemd rule in 69-dm-lvm-metad.rules, GOTO active one.
  Add test for activation/volume_list (Sub)LV remnants.
  Disallow usage of cache format 2 with mq cache policy.
  Again accept striped LV as COW LV with lvconvert -s (2.02.169).
  Fix raid target version testing for supported features.
  Allow activation of pools when thin/cache_check tool is missing.
  Remove RaidLV on creation failure when rmeta devices can't be activated.
  Add prioritized_section() to restore cookie boundaries (2.02.177).
  Enhance error messages when read error happens.
  Enhance mirror log initialization for old mirror target.
  Skip private crypto and stratis devices.
  Skip frozen raid devices from scanning.
  Activate RAID SubLVs on read_only_volume_list readwrite
  Offer convenience type raid5_n converting to raid10
  Automatically avoid reading invalid snapshots during device scan.